--- a/tategaki.css
+++ b/tategaki.css
@@ -33,8 +33,12 @@ br {
   margin: 1vw;
 }
 
-body{
-  font-family: "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", "Meiryo", "verdana", sans-serif;
+html {
   overflow-x: auto;
   overflow-y: hidden;
+}
+
+body {
+  font-family: "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", "Meiryo", "verdana", sans-serif;
+
 }
