--- a/tategaki.css
+++ b/tategaki.css
@@ -1,7 +1,8 @@
 .box {
   text-align: right;
   padding-right: 10vw;
-
+  height: auto;
+  width: max-content;
 }
 
 .exp {
@@ -11,6 +12,7 @@
     -ms-writing-mode: vertical-rl;
     writing-mode: vertical-rl;
     text-align: left;
+    height: auto;
     padding-top: 8vh;
     padding-bottom: 8vh;
     -webkit-column-count: 1;
