--- a/tategaki.css
+++ b/tategaki.css
@@ -13,8 +13,8 @@
     writing-mode: vertical-rl;
     text-align: left;
     height: auto;
-    padding-top: 8vh;
-    padding-bottom: 8vh;
+    padding-top: 2.5em;
+    padding-bottom: 2.5em;
     -webkit-column-count: 1;
     -moz-column-count: 1;
     -ms-column-count: 1;
